# metaheuristic

./: README.md
lista2/: Cargo.toml  Makefile  plan.txt
lista2/data/: sort.py
lista2/python/: best_values.py  main.py  test.py
lista2/results/: report.tex
lista2/results/tables/: multithreading_asymmetric_time.txt  multithreading_euclid_prd.txt  multithreading_euclid_time.txt  multithreading_symmetric_prd.txt  multithreading_symmetric_time.txt  multithreading_tsplib_asym_prd.txt  multithreading_tsplib_asym_time.txt  multithreading_tsplib_euclid_prd.txt  multithreading_tsplib_euclid_time.txt  multithreadingasymmetric_prd.txt  multithreadingasymmetric_time.txt  multithreadingeuclid_prd.txt  multithreadingeuclid_time.txt  multithreadingsymmetric_prd.txt  multithreadingsymmetric_time.txt  multithreadingtspib_asym_prd.txt  multithreadingtspib_asym_time.txt  multithreadingtsplib_euclid_prd.txt  multithreadingtsplib_euclid_time.txt  neighbour_asymmetric_prd.txt  neighbour_asymmetric_time.txt  neighbour_euclid_prd.txt  neighbour_euclid_time.txt  neighbour_symmetric_prd.txt  neighbour_symmetric_time.txt  neighbour_tsplib_asym_prd.txt  neighbour_tsplib_asym_time.txt  neighbour_tsplib_euclid_prd.txt  neighbour_tsplib_euclid_time.txt  neighbourasymmetric_prd.txt  neighbourasymmetric_time.txt  neighboureuclid_prd.txt  neighboureuclid_time.txt  neighboursymmetric_prd.txt  neighboursymmetric_time.txt  neighbourtspib_asym_prd.txt  neighbourtspib_asym_time.txt  neighbourtsplib_euclid_prd.txt  neighbourtsplib_euclid_time.txt  tabu_asymmetric_prd.txt  (+15 more)
lista2/src/: lib.rs  main.rs
(+84 files in other folders)
