[package]
name = "lista2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsp_tabu"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]

[profile.release]
opt-level = 3

[dependencies]
rand = "0.8.4"
shuffle = "0.1.7"
num_cpus = "*"